--- a/customStyles/myStyles.css
+++ b/customStyles/myStyles.css
@@ -3,10 +3,30 @@ body {
   height: 250px;
   align-items: center;
   align-content: center;
+  flex: auto;
+}
+
+#loader > img {
+  width: 200px;
+  height: 150px;
+  padding: 24px;
+  display: block;
+}
+
+#content {
+  width: 200px;
+  height: 150px;
+  display: none;
+}
+
+#countriesList {
+  width: 180px;
+  overflow-y: auto;
 }
 
 #mapid {
   width: 200px;
   height: 150px;
   padding: 24px;
+  display: none;
 }
