--- a/customStyles/myStyles.css
+++ b/customStyles/myStyles.css
@@ -19,14 +19,41 @@ body {
   display: none;
 }
 
-#countriesList {
+#mapLoader,
+#provinceLoader,
+#provincesList,
+#updateButton {
+  display: none;
+}
+
+#countryDropdown,
+#provinceDropdown {
+  padding-bottom: 5px;
+  display: block;
+  justify-content: space-around;
+}
+
+#countriesList,
+#provincesList {
   width: 180px;
+  height: 24px;
   overflow-y: auto;
 }
 
-#mapid {
-  width: 200px;
-  height: 150px;
-  padding: 24px;
+#provinceLoader {
+  width: 80px;
+  height: 24px;
+}
+
+#myMap {
+  width: 250px;
+  height: 175px;
+  /* padding-top: 10px; */
+  padding: 5px;
   display: none;
+}
+
+#mapid {
+  width: 240px;
+  height: 150px;
 }
