--- a/customStyles/myStyles.css
+++ b/customStyles/myStyles.css
@@ -45,7 +45,7 @@ body {
   height: 24px;
 }
 
-#myMap {
+#covidMapDiv {
   width: 250px;
   height: 175px;
   /* padding-top: 10px; */
@@ -53,7 +53,7 @@ body {
   display: none;
 }
 
-#mapid {
+/* #covidMap {
   width: 240px;
   height: 150px;
-}
+} */
